--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<input class="field" id="field" type="text" placeholder="ENTER STRING">
+	<input class ="field result" id="result" type="text" placeholder="SYBMOLS" readonly>
 	<button class="button" onClick="CountSymbols();">COUNT SYMBOLS</button>
 </body>
 </html>
